<resources>
    <string name="app_name">FlyNet</string>
    <string name="app_name2">Networking in The Air</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>

    <string name="drawer_open">Drawer Open</string>
    <string name="drawer_close">Drawer Close</string>
    <string name="profile">My Profile</string>
    <string name="interests">My Interests</string>
    <string name="flights">My Flights</string>
    <string name="messages">Messages</string>
    <string name="matches">My Matches</string>


</resources>
